[package]
name = "upskill"
version = "0.1.0"
edition = "2021"
description = "3D points projected to 2D with Vulkan"
build = "build.rs"

[[bin]]
name = "upskill"
path = "src/main.rs"

[dependencies]
ash = { version = "0.38", default-features = false, features = ["loaded"] }
ash-window = "0.13"
winit = "0.30"
raw-window-handle = "0.6"
gpu-allocator = { version = "0.27", features = ["vulkan"] }
bytemuck = { version = "1.14", features = ["derive"] }

[build-dependencies]
naga = { version = "24", features = ["wgsl-in", "spv-out"] }
